--- a/App/MainWindow/MainWindow.ui
+++ b/App/MainWindow/MainWindow.ui
@@ -134,7 +134,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>7</number>
       </property>
       <widget class="QWidget" name="tab_power">
        <attribute name="title">
@@ -153,14 +153,14 @@
        <widget class="QGroupBox" name="groupBox_test">
         <property name="geometry">
          <rect>
-          <x>841</x>
+          <x>759</x>
           <y>9</y>
-          <width>370</width>
+          <width>441</width>
           <height>415</height>
          </rect>
         </property>
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+         <sizepolicy hsizetype="Maximum" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -173,7 +173,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>370</width>
+          <width>450</width>
           <height>16777215</height>
          </size>
         </property>
@@ -184,8 +184,8 @@
        <widget class="QPushButton" name="pb_testpanel">
         <property name="geometry">
          <rect>
-          <x>680</x>
-          <y>30</y>
+          <x>570</x>
+          <y>20</y>
           <width>101</width>
           <height>51</height>
          </rect>
@@ -479,31 +479,31 @@
          </item>
         </layout>
        </widget>
-       <widget class="QwtDial" name="Dial_Voltage" native="true">
+       <widget class="QwtDial" name="Dial_Voltage">
         <property name="geometry">
          <rect>
-          <x>620</x>
-          <y>140</y>
+          <x>510</x>
+          <y>210</y>
           <width>200</width>
           <height>200</height>
          </rect>
         </property>
-        <property name="upperBound" stdset="0">
+        <property name="upperBound">
          <double>400.000000000000000</double>
         </property>
-        <property name="value" stdset="0">
+        <property name="value">
          <double>50.000000000000000</double>
         </property>
-        <property name="readOnly" stdset="0">
+        <property name="readOnly">
          <bool>true</bool>
         </property>
-        <property name="lineWidth" stdset="0">
+        <property name="lineWidth">
          <number>4</number>
         </property>
-        <property name="minScaleArc" stdset="0">
+        <property name="minScaleArc">
          <double>60.000000000000000</double>
         </property>
-        <property name="maxScaleArc" stdset="0">
+        <property name="maxScaleArc">
          <double>300.000000000000000</double>
         </property>
        </widget>
@@ -526,6 +526,11 @@
       <widget class="QWidget" name="tab_monitor">
        <attribute name="title">
         <string>Monitor</string>
+       </attribute>
+      </widget>
+      <widget class="QWidget" name="tab_log">
+       <attribute name="title">
+        <string>Log</string>
        </attribute>
       </widget>
      </widget>
