--- a/Conf/gui.qss
+++ b/Conf/gui.qss
@@ -85,3 +85,14 @@ background-color: #1E90FF;
 #InfoPanel QPushButton#pb_display_autostate_stopped:checked {
 background-color: #FFFF00;
 }
+
+#IOPanel QPushButton:disabled {
+color: rgb(59, 59, 59);
+border:1px groove rgb(59, 59, 59);
+}
+
+#IOPanel QPushButton:disabled:checked {
+background-color: qlineargradient(spread:reflect, x1:0, y1:0, x2:1, y2:1,
+                        stop:0 rgba(188,208,197, 255), stop:1 rgba(66,168,129, 255));
+border-width:2px;
+}
