--- a/App/SystemSettingPanel/SystemSettingPanel.ui
+++ b/App/SystemSettingPanel/SystemSettingPanel.ui
@@ -326,11 +326,21 @@
       </item>
       <item row="1" column="6">
        <widget class="QDoubleSpinBox" name="dsb_adc_offset">
+        <property name="decimals">
+         <number>3</number>
+        </property>
         <property name="minimum">
          <double>-500.000000000000000</double>
         </property>
         <property name="maximum">
          <double>500.000000000000000</double>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="6">
+       <widget class="QPushButton" name="pb_open_adccalc">
+        <property name="text">
+         <string>打开标定页面</string>
         </property>
        </widget>
       </item>
