feat: 打孔动作完成(TODO 穿透算法的移植)

--- a/App/CoordSettingPanel/CoordSetToGivenValueDialog.ui
+++ b/App/CoordSettingPanel/CoordSetToGivenValueDialog.ui
@@ -46,7 +46,7 @@
    <item row="0" column="0">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>设定为 (毫米 mm)</string>
+      <string>设定为 (毫米 mm/度)</string>
      </property>
     </widget>
    </item>
